--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-
-    <p>This is the testing branch</p>
-    <p>gonna merge to see how it's effected</p>
+<nav id="navbar">
+    <p>Insert Logo</p>
+    <h2>RoosterTeeth</h2>
+</nav>
     
 </body>
 </html>
