--- a/index.html
+++ b/index.html
@@ -11,7 +11,38 @@
 <nav id="navbar">
     <p>Insert Logo</p>
     <h2>RoosterTeeth</h2>
+    <ul id="nav-list">
+        <li>Store</li>
+        <li>Schedule</li>
+        <li>RvB</li>
+        <li>Other Channels</li>
+        <li>Contact</li>
+    </ul>
 </nav>
+
+<section id="store">
+
+</section>
+
+
+<section id="Schedule">
+
+</section>
+
+
+<section id="RvB">
+
+</section>
+
+
+<section id="other-channels">
+
+</section>
+
+
+<footer id="socials">
+
+</footer>
     
 </body>
 </html>
