--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
 </nav>
 
 
+<section id="store">
+
+</section>
+
+
+<section id="Schedule">
+
+</section>
+
+
+<section id="RvB">
+
+</section>
+
+
+<section id="other-channels">
+
+</section>
+
+
+<footer id="socials">
+
+</footer>
+
+
     
 </body>
 </html>
