--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>Insert Logo</p>
     <h2>RoosterTeeth</h2>
     <ul id="nav-list">
-        <li>Store</li>
-        <li>Schedule</li>
-        <li>RvB</li>
-        <li>Other Channels</li>
-        <li>Contact</li>
+        <a id="nav-link" href="#store"><li>Store</li></a>
+        <a id="nav-link" href="#schedule"><li>Schedule</li></a>
+        <a id="nav-link" href="#RvB"><li>RvB</li></a>
+        <a id="nav-link" href="#other-channels"><li>Other Channels</li></a>
+        <a id="nav-link" href="#socials"><li>Contact</li></a>
     </ul>
 </nav>
 
@@ -28,7 +28,7 @@
 </section>
 
 
-<section id="Schedule">
+<section id="schedule">
 
 </section>
 
