--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <div class="desc-list">
     <p class="sched-desc">Rooster Teeth/Achievement Hunter has multiple webseries/shows that air weekly. See below to find which show you want to tune into at what time.</p>
 
+
+        <!--Add scheduled times-->
         <ul class="rt-list">
             <li>RT Shorts</li>
             <li>RT Life</li>
